@@ -15,7 +15,7 @@
 \usage{
 digest(object, algo=c("md5", "sha1", "crc32", "sha256", "sha512",
                       "xxhash32", "xxhash64", "murmur32", "spookyhash",
-                      "blake3"), serialize=TRUE, file=FALSE,
+                      "blake3", "crc32c"), serialize=TRUE, file=FALSE,
        length=Inf, skip="auto", ascii=FALSE, raw=FALSE, seed=0,
        errormode=c("stop","warn","silent"),
        serializeVersion=.getSerializeVersion())
@@ -27,7 +27,7 @@ digest(object, algo=c("md5", "sha1", "crc32", "sha256", "sha512",
   \item{algo}{The algorithms to be used; currently available choices are
     \code{md5}, which is also the default, \code{sha1}, \code{crc32},
     \code{sha256}, \code{sha512}, \code{xxhash32}, \code{xxhash64},
-    \code{murmur32}, \code{spookyhash} and \code{blake3}.}
+    \code{murmur32}, \code{spookyhash}, \code{blake3}, and \code{crc32c}.}
   \item{serialize}{A logical variable indicating whether the object
     should be serialized using \code{serialize} (in ASCII
     form). Setting this to \code{FALSE} allows to compare the digest
@@ -98,6 +98,9 @@ digest(object, algo=c("md5", "sha1", "crc32", "sha256", "sha512",
 
   For blake3, the C implementation by Samuel Neves and Jack O'Connor is used.
 
+  For crc32c, the portable (i.e. non-hardware accelerated) version from
+  Google is used.
+
   Please note that this package is not meant to be used for
   cryptographic purposes for which more comprehensive (and widely
   tested) libraries such as OpenSSL should be used. Also, it is known
@@ -145,6 +148,7 @@ digest(object, algo=c("md5", "sha1", "crc32", "sha256", "sha512",
 
   \url{https://github.com/BLAKE3-team/BLAKE3/} for the original source code of blake3.
 
+  \url{https://github.com/google/crc32c} for the (non-hardware-accelerated) crc32c code.
 }
 \author{Dirk Eddelbuettel \email{edd@debian.org} for the \R interface;
   Antoine Lucas for the integration of crc32; Jarek Tuszynski for the
@@ -314,6 +318,15 @@ for (i in seq(along=blake3Input)) {
     blake3 <- digest(blake3Input[i], algo="blake3", serialize=FALSE)
     cat(blake3, "\n")
     stopifnot(identical(blake3, blake3Output[i]))
+}
+
+## crc32c
+crc32cInput <- c("123456789", "The quick brown fox jumps over the lazy dog")
+crc32cOutput <- c("e3069283", "22620404")
+for (i in seq_along(crc32cInput)) {
+    crc32c <- digest(crc32cInput[i], algo="crc32c", serialize=FALSE)
+    cat(crc32c, "\n")
+    stopifnot(identical(crc32c, crc32cOutput[i]))
 }
 
 # example of a digest of a standard R list structure
