@@ -1,3 +1,15 @@
+2023-04-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/digest.c (digest): Support crc33c
+	* man/digest.Rd: Document crc32c option, add two examples
+
+	* src/crc32c.h: Adding new CRC32C implementation
+	* src/crc32c.cpp: Idem
+	* src/crc32c_portable.cpp: Idem
+	* src/crc32c/*: Idem
+
+	* src/Makevars: Added for PKG_CPPFLAGS
+
 2023-02-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
